# jsonld_ex

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIFF_IMPLEMENTATION.md  Makefile  PERFORMANCE_ROADMAP.md  README.md  SECURITY.md  WORKFLOW_FEEDBACK.md  benchmark.exs  jsonld_ex-0.4.1.tar  jsonld_ex-0.4.2.tar  lychee.toml  mix.exs
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  link-check.yml  preflight.yml  publish-docs.yml  release-precompiled.yml
_build/dev/lib/finch/.mix/: compile.elixir
_build/dev/lib/req/ebin/: req.app  (+11 more)
bench/: comprehensive_benchmark.exs  turbo_benchmark.exs  ultimate_benchmark.exs
examples/: quickstart.exs
lib/: jsonld.ex  jsonld_ex.ex
lib/jsonld_ex/: c14n.ex  claude_registry.ex  kyozo_decoder.ex  kyozo_encoder.ex  native.ex
lib/mix/tasks/: spec.apply.ex  spec.check.ex  spec.export.docs.ex  spec.hash.ex  spec.hub.init.ex  spec.lint.ex  spec.thread.render.ex
native/jsonld_nif/: .gitignore  Cargo.toml
native/jsonld_nif/.cargo/: config.toml
native/jsonld_nif/src/: lib.rs  ssi_urdna.rs
scripts/: build.sh  preflight.sh  preflight_check.sh
test/: jsonld_ex_test.exs
test/jsonld_ex/: c14n_test.exs  diff_test.exs  ssi_integration_test.exs
test/jsonld_ex/diff/: operational_test.exs  performance_test.exs  semantic_test.exs  structural_test.exs
test/mix/: spec_apply_test.exs
work/spec_requests/: README.md  schema.json
work/spec_requests/contexts/: spec.jsonld
(+698 files in other folders)
