[package]
name = "jsonld_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "jsonld_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-ld = "0.16"
semver = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
indexmap = { version = "2.0", features = ["serde"] }
url = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"
rayon = { version = "1.8", optional = true }
lru = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["parallel"]
parallel = ["rayon"]